# PredictingTheOrb

./: README.md  pyproject.toml
march-madness/: data-2019.html  duke.csv  get_data.py  model.ipynb
question-21/: analysis.ipynb  census_by_age.csv
question-5/: aggregate_analysis.ipynb  analysis.ipynb  per_game_analysis_(deprecated).ipynb
question-5/games_data/regular_season/: reg_games_2021.csv
