[tool.poetry]
name = "predictingtheorb"
version = "0.1.0"
description = ""
authors = ["Mark Benjamin"]

[tool.poetry.dependencies]
python = "3.10.0"
numpy = "^1.22.0"
pandas = "^1.3.5"
ipykernel = "^6.7.0"
black = "^21.12b0"
flake8 = "^4.0.1"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
